deployment/deployment-with-ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-demo
  name: api-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-demo
  template:
    metadata:      
      labels:
        app: api-demo
    spec:
      containers:
        - image: ghcr.io/yogendra/api-demo:latest
          name: api-demo
          resources: 
            requests:
              memory: "720Mi"
              cpu: "500m"
            limits:
              memory: "2000Mi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-demo
  name: api-demo
spec:
  type: ClusterIP
  ports:
    - name: app
      port: 8080
      targetPort: 8080
  selector:
    app: api-demo

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: apidemo
  namespace: apidemo
  labels:
    app: apidemo
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - secretName: apidemo-https-secret
      hosts:
        - apidemo.techtalk.cna-demo.ga
  rules:
    - host: apidemo.techtalk.cna-demo.ga
      http:
        paths:
          - backend:
              serviceName: apidemo
              servicePort: http
